Adicionado venda 3 na aba vendas

--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Pagina Inicial</h1>
-    <p>Vendas= R$ 800,00</p>
+    <p>Vendas= R$ 300,00</p>
+    <p>Vendas 2 = R$ 600,00</p>
+    <p>Vendas 3 = R$ 900,00</p>
 </body>
 </html>
